--- a/src/components/contactUs/contactUs.css
+++ b/src/components/contactUs/contactUs.css
@@ -14,4 +14,13 @@
       border-radius: 0.5rem;
     }
   }
+
+  .submit-button {
+    width: fit-content;
+    padding: 1rem 2rem;
+    border-radius: 6px;
+    background-color: var(--primaryColor);
+    color: #fff;
+    border: none;
+  }
 }
