--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,35 +1,65 @@
 .home {
-  padding: 1rem;
-  min-height: calc(100dvh - 2rem);
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  position: relative;
+  color: #fff;
+  header {
+    padding-top: 2rem;
+  }
 }
+
+.enquire-button {
+  border-radius: 6px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  height: fit-content;
+  font-size: 16px;
+  font-family: Cinzel;
+  font-weight: bold;
+}
+
+.enquire-button:hover {
+  background-color: var(--primaryColor);
+  border-color: var(--primaryColor);
+}
+
+.background-video-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: -1;
+
+  #myVideo {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.dimming-video {
+  z-index: 20;
+  opacity: 0.4;
+  background-color: #000;
+  border-radius: 0;
+  position: absolute;
+  inset: 0%;
+}
+
 header {
   display: flex;
   justify-content: space-between;
 }
 
-.contact-conatiner {
-  display: inline-flex;
+.home .container {
+  flex-grow: 1;
+  display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-  a {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    max-width: 350px;
-    padding: 0.5rem 1rem;
-    svg {
-      min-width: 1.5rem;
-      min-height: 1.5rem;
-    }
-  }
-  a:hover {
-    color: #fff;
-    background-color: var(--primaryColor);
-    border-radius: 0.5rem;
-  }
 }
 
 .title-container {
@@ -38,4 +68,12 @@ header {
   align-items: center;
   flex-grow: 1;
   text-align: center;
+  gap: 1rem;
+  justify-content: space-evenly;
+}
+
+.home .logo {
+  img {
+    width: 300px;
+  }
 }
