--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -9,14 +9,28 @@
   position: fixed;
   top: 0;
   left: 0;
+  max-height: 100dvh;
   min-height: 100dvh;
   overflow: auto;
   width: min(fit-content, var(--sheet-width));
-  border-right: 1px solid var(--border-color);
-  transform: translateX(calc(var(--sheet-width) * -1));
+  transform: translateX(-1000px);
   transition: all 500ms ease-in-out;
   background-color: var(--white);
   padding: 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: #000;
+  z-index: 999;
+  .menu-toggle-button {
+    width: fit-content;
+  }
+}
+
+.menu-container .logo img {
+  width: 200px !important;
+  margin: auto;
+  display: block;
 }
 
 .menu-sheet.active {
@@ -27,15 +41,21 @@
   ul {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     list-style-type: none;
     padding: 0;
-    padding-top: 2rem;
     li {
       padding: 1rem;
-      border: 1px solid var(--border-color);
-      border-radius: 0.5rem;
       cursor: pointer;
+      color: var(--primaryColor);
+      border-bottom: 1px solid transparent;
+      a {
+        color: var(--primaryColor);
+        width: 100%;
+        display: inline-block;
+      }
+    }
+    li:hover {
+      border-bottom: 1px solid var(--primaryColor);
     }
   }
 }
@@ -46,11 +66,35 @@
   display: flex;
   padding: 0.5rem;
   border-radius: 50%;
-  color: var(--primaryColor);
+  color: #fff;
   transition: background 0.2s ease-in;
 }
 
 .menu-toggle-button:hover {
   color: white;
   background: var(--primaryColor);
+}
+
+.contact-conatiner {
+  display: inline-flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  margin-top: auto;
+  a {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    max-width: 350px;
+    padding: 0.5rem 1rem;
+    color: #fff;
+    font-size: 12px;
+    svg {
+      min-width: 1.5rem;
+      min-height: 1.5rem;
+    }
+  }
+  a:hover {
+    background-color: var(--hoverColor);
+    border-radius: 0.5rem;
+  }
 }
