--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,4 +1,44 @@
 .services-list {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.service-list-item {
+  display: flex;
+  gap: 2rem;
+  padding: 2rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  img {
+    aspect-ratio: 1;
+    width: 20rem;
+    border-radius: 0.5rem;
+  }
+}
+
+.service-list-item:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.service-list-item:hover {
+  box-shadow: var(--primaryColor) 0px 3px 8px;
+  box-shadow: var(--primaryColor) 0px 5px 15px;
+  border-radius: 0.5rem;
+}
+
+.description-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  
+  p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 25rem;
+  }
+  
 }
